--- a/app/gps_alarm/src/main/res/drawable/border_radius_10.xml
+++ b/app/gps_alarm/src/main/res/drawable/border_radius_10.xml
@@ -4,5 +4,5 @@
     <corners android:radius="10dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="@color/alarm_list_border_stroke_color" />
 </shape>
