--- a/app/gps_alarm/src/main/res/layout/create_alarm_fragment.xml
+++ b/app/gps_alarm/src/main/res/layout/create_alarm_fragment.xml
@@ -38,7 +38,7 @@
             app:layout_constraintBottom_toTopOf="@id/map_view"
             app:layout_constraintTop_toBottomOf="@id/b_search_address" />
 
-        <com.naver.maps.map.MapView
+        <com.bowoon.gps_alarm.ui.view.FixedNaverMapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
