--- a/app/gps_alarm/src/main/res/layout/vh_alarm.xml
+++ b/app/gps_alarm/src/main/res/layout/vh_alarm.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/border_radius_10"
-        android:padding="10dp">
+        android:padding="10dp"
+        app:onDebounceClickListener="@{() -> vh.goToDetail(item)}">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_alarm_title"
