--- a/app/gps_alarm/src/main/res/navigation/nav_alarm.xml
+++ b/app/gps_alarm/src/main/res/navigation/nav_alarm.xml
@@ -9,11 +9,27 @@
         android:id="@+id/alarmFragment"
         android:name="com.bowoon.gps_alarm.ui.alarm.AlarmFragment"
         android:label="AlarmFragment"
-        tools:layout="@layout/alarm_fragment" />
+        tools:layout="@layout/alarm_fragment">
+        <action
+            android:id="@+id/action_alarmFragment_to_detailAlarmFragment"
+            app:destination="@id/detailAlarmFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/createAlarmFragment"
         android:name="com.bowoon.gps_alarm.ui.alarm.CreateAlarmFragment"
         android:label="CreateAlarmFragment"
         tools:layout="@layout/create_alarm_fragment" />
+
+    <fragment
+        android:id="@+id/detailAlarmFragment"
+        android:name="com.bowoon.gps_alarm.ui.alarm.AlarmDetailFragment"
+        android:label="AlarmDetailFragment"
+        tools:layout="@layout/fragment_alarm_detail">
+        <argument
+            android:name="alarm"
+            android:defaultValue="@null"
+            app:argType="com.bowoon.gps_alarm.data.Address"
+            app:nullable="true" />
+    </fragment>
 </navigation>
