--- a/app/gps_alarm/src/main/res/values-night/colors.xml
+++ b/app/gps_alarm/src/main/res/values-night/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="alarm_list_border_stroke_color">#000000</color>
+    <color name="alarm_list_border_stroke_color">#FFFFFF</color>
 </resources>
