--- a/app/fileprovider/src/main/res/layout/vh_content_image.xml
+++ b/app/fileprovider/src/main/res/layout/vh_content_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
