[RssReader] auto scroll 적용

--- a/app/rss_reader/src/main/res/layout/vh_rss_content.xml
+++ b/app/rss_reader/src/main/res/layout/vh_rss_content.xml
@@ -5,14 +5,19 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="30dp"
         app:cardCornerRadius="20dp">
+        <!--        android:layout_margin="30dp"-->
 
-        <androidx.recyclerview.widget.RecyclerView
+        <!--        <androidx.recyclerview.widget.RecyclerView-->
+        <!--            android:id="@+id/rv_rss_list"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:orientation="horizontal"-->
+        <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />-->
+
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/rv_rss_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
 </layout>
