--- a/app/rss_reader/src/main/res/layout/vh_article.xml
+++ b/app/rss_reader/src/main/res/layout/vh_article.xml
@@ -41,7 +41,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@{item.encodeTitle}"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="20dp"
             app:layout_constraintBottom_toTopOf="@id/tv_article_description"
             app:layout_constraintTop_toTopOf="@id/iv_article_image"
@@ -58,7 +58,7 @@
             android:ellipsize="end"
             android:maxLines="3"
             android:text="@{item.encodeDescription}"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_article_image"
             app:layout_constraintTop_toBottomOf="@id/tv_article_title"
